# Vantage

./: .gitignore  ARCHITECTURE.md  README.md  SECRETS_MANAGEMENT.md  check.py  docker-compose.yml  run_tests.sh  schema.sql  send_test_metrics.py  start.sh  test_adv_features_1.py  test_advanced_features.py  test_all_features.py  test_clickhouse.py  test_comprehensive.py  test_integration.py  test_phase2_features.py  verification_report.json  verify_platform.py
tests/: load_test.py  performance_benchmark.py  test_integration_complete.py
vantage-agent/: README.md  pyproject.toml  requirements.txt  send_metrics.py  setup.py  test_agent.py
vantage-agent/examples/: README.md  demo_fastapi.py  demo_flask.py  demo_requests.py
vantage-agent/tests/: __init__.py  conftest.py  test_collector.py  test_config.py  test_instrumentation.py  test_metrics.py  test_timing.py
vantage-agent/vantage_agent/: __init__.py  config.py
vantage-agent/vantage_agent/instrumentation/: __init__.py  base.py  fastapi_patch.py  flask_patch.py  httpx_patch.py  requests_patch.py
vantage-agent/vantage_agent/metrics/: __init__.py  collector.py  exporter.py  models.py
vantage-agent/vantage_agent/utils/: __init__.py  logger.py  timing.py
vantage-api/: Dockerfile  requirements.txt
vantage-api/api/: __init__.py  alerts.py  auth.py  comparison.py  comparison_router.py  config.py  database.py  health_router.py  health_score.py  main.py  metrics_router.py  query.py  traces.py  vql.py  vql_router.py  vql_security.py  websocket.py
vantage-api/tests/: conftest.py  test_auth.py  test_query.py
vantage-collector/: Dockerfile  README.md  requirements.txt
vantage-collector/app/: __init__.py  auth.py  config.py  main.py  trace_helper.py
vantage-collector/tests/: requirements.txt  test_api.py  test_auth.py
vantage-common/: README.md  pyproject.toml
vantage-common/vantage_common/: __init__.py  backpressure.py  circuit_breaker.py  constants.py  exceptions.py  prometheus_exporter.py  structured_logging.py
vantage-dashboard/: Dockerfile  index.html  package.json
vantage-dashboard/src/: App.tsx  index.css
vantage-worker/: Dockerfile  requirements.txt
vantage-worker/tests/: conftest.py  test_consumer.py
vantage-worker/worker/: __init__.py  alerting.py  config.py  consumer.py  database.py  database_clickhouse.py  database_factory.py  database_sqlite.py  downsampling.py  main.py  metrics.py  periodic_tasks.py  tracing.py
(+28 files in other folders)
